styles.css
#dream {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  --inColor: #ddd;
  --outColor: #555;
  background-image: radial-gradient(var(--inColor), var(--outColor));
}

.dreamBox {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  flex: 1;
}

#dreamOverlay {
  position: absolute;
  top: 0;
  left: 0;
  --inColor0: #fff;
  --outColor0: #000;
  background-image: radial-gradient(var(--inColor0), var(--outColor0));
  opacity: 1;
  pointer-events: none;
}

#dreamOverlay.fadeOut {
  opacity: 0;
  transition: 2s;
}

body {
  margin: 0;
  padding: 0;
  border: 0;
  min-height: 100vh;
  min-height: -webkit-fill-available;
  width: 100vw;
}

@keyframes shiftDream {
  from {
    background-image: radial-gradient(#ddd, #555);
  }
  to {
    background-image: radial-gradient(#555, #ddd);
  }
}

#dreamText {
  --textColor: #000;
  color: var(--textColor);
  font-size: 2em;
  font-family: 'Nanum Myeongjo', serif;
}

.textContainer {
  text-align: center;
  padding: 1em;
}

#buttons {
  margin: 2em;
  text-align: center;
}

#buttons button {
  background: #fff;
  color: #000;
  cursor: pointer;
  border-color: #fff;
  border-width: 1px;
  font-family: 'Nanum Myeongjo', serif;
  font-size: 1.5em;
  margin: .2em;
}

#buttons button:hover {
  --bg: white;
  color: var(--bg);
  border-color: var(--bg);
  border-width: 1px;
  background: rgba(125, 125, 125, 0);
  transition: .5s;
}

@media only screen and (min-width: 500px) {
  .textContainer {
    width: 50%;
  }

  #buttons button {
    font-size: .9em;
  }
}

